gl/context_egl: pass the vars in the right order to DestroySurface

https://bugzilla.gnome.org/show_bug.cgi?id=728514